# robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bAndRun.sh  basicTrain.sh  camera.cpp  cmakeconfig.h.in  comands.cpp  comands.h  deps.sh  deps_arch.txt  deps_deb.txt  img_process.cpp  img_process.h  logic_process.cpp  logic_process.h  main.cpp  main.h  main_common.cpp  main_edit.cpp  main_execute.cpp  main_train.cpp  misc.cpp  misc.h  nnetwork.cpp  nnetwork.h
libs/: CMakeLists.txt  comm.cpp  comm.h  img_process.cpp  img_process.h  logic_process.cpp  logic_process.h  main_common.cpp  nnetwork.cpp  nnetwork.h  options.h
libs/fann/lib/: libdoublefann.so.2.2.0  libfann.so.2.2.0  libfixedfann.so.2.2.0  libfloatfann.so.2.2.0
src/: execute.cpp  execute2.cpp  main_camera.cpp  main_edit.cpp  main_execute.cpp  main_train.cpp  square.cpp
src/neural/: main_edit.cpp  main_execute.cpp  main_train.cpp
src/nocompile/: execute2.cpp
standard_libs/: CMakeLists.txt  arg_helper.cpp  arg_helper.h  browser.cpp  browser.h  byte_helper.h  input.h  misc.cpp  misc.h
